{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 894,
  "lineage": "c214e12f-5225-a749-9c19-86d6d9bc6cb9",
  "resources": [
    {
      "module": "module.auth-ecs-service",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267047035:loadbalancer/app/qa-cluster-alb-auth/b3ef69444d164c83",
            "arn_suffix": "app/qa-cluster-alb-auth/b3ef69444d164c83",
            "desync_mitigation_mode": "defensive",
            "dns_name": "qa-cluster-alb-auth-1327580795.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267047035:loadbalancer/app/qa-cluster-alb-auth/b3ef69444d164c83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "qa-cluster-alb-auth",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02be4d19acb2ff870"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0910757671f7fee93"
              },
              {
                "subnet_id": "subnet-0b30bf21bd045a159"
              },
              {
                "subnet_id": "subnet-0c10f77a821bb694e"
              }
            ],
            "subnets": [
              "subnet-0910757671f7fee93",
              "subnet-0b30bf21bd045a159",
              "subnet-0c10f77a821bb694e"
            ],
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            },
            "vpc_id": "vpc-099d8b822f47b9951",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.auth-ecs-service.aws_security_group.alb",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_subnet.PublicSubnet3",
            "module.vpc.aws_vpc.non_prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auth-ecs-service",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267047035:targetgroup/QA-cluster-TargetGroup-auth/492b9e74cc08cf4e",
            "arn_suffix": "targetgroup/QA-cluster-TargetGroup-auth/492b9e74cc08cf4e",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267047035:targetgroup/QA-cluster-TargetGroup-auth/492b9e74cc08cf4e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "QA-cluster-TargetGroup-auth",
            "port": 81,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "dependencies": [
            "module.auth-ecs-service.aws_alb.alb",
            "module.auth-ecs-service.aws_security_group.alb",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_subnet.PublicSubnet3",
            "module.vpc.aws_vpc.non_prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auth-ecs-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047035:security-group/sg-02be4d19acb2ff870",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02be4d19acb2ff870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ingress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "QA-cluster_ALB_SecurityGroup]-auth",
            "name_prefix": "",
            "owner_id": "533267047035",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.non_prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.payment-ecs-service",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267047035:loadbalancer/app/qa-cluster-alb-payment/8eb8545297664e06",
            "arn_suffix": "app/qa-cluster-alb-payment/8eb8545297664e06",
            "desync_mitigation_mode": "defensive",
            "dns_name": "qa-cluster-alb-payment-287256880.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267047035:loadbalancer/app/qa-cluster-alb-payment/8eb8545297664e06",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "qa-cluster-alb-payment",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc3338b0ad546c28"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0910757671f7fee93"
              },
              {
                "subnet_id": "subnet-0b30bf21bd045a159"
              },
              {
                "subnet_id": "subnet-0c10f77a821bb694e"
              }
            ],
            "subnets": [
              "subnet-0910757671f7fee93",
              "subnet-0b30bf21bd045a159",
              "subnet-0c10f77a821bb694e"
            ],
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            },
            "vpc_id": "vpc-099d8b822f47b9951",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.payment-ecs-service.aws_security_group.alb",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_subnet.PublicSubnet3",
            "module.vpc.aws_vpc.non_prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.payment-ecs-service",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:533267047035:targetgroup/QA-cluster-TargetGroup-payment/a49cb92ad56e7fbe",
            "arn_suffix": "targetgroup/QA-cluster-TargetGroup-payment/a49cb92ad56e7fbe",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:533267047035:targetgroup/QA-cluster-TargetGroup-payment/a49cb92ad56e7fbe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "QA-cluster-TargetGroup-payment",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "dependencies": [
            "module.payment-ecs-service.aws_alb.alb",
            "module.payment-ecs-service.aws_security_group.alb",
            "module.vpc.aws_subnet.PublicSubnet1",
            "module.vpc.aws_subnet.PublicSubnet2",
            "module.vpc.aws_subnet.PublicSubnet3",
            "module.vpc.aws_vpc.non_prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.payment-ecs-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047035:security-group/sg-0bc3338b0ad546c28",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc3338b0ad546c28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ingress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "QA-cluster_ALB_SecurityGroup]-payment",
            "name_prefix": "",
            "owner_id": "533267047035",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.non_prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047035:subnet/subnet-0c10f77a821bb694e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c10f77a821bb694e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267047035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet1",
              "Project": "QA-subnets"
            },
            "tags_all": {
              "Name": "publicsubnet1",
              "Project": "QA-subnets"
            },
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.non_prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047035:subnet/subnet-0b30bf21bd045a159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30bf21bd045a159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267047035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet2",
              "Project": "qa-subnets"
            },
            "tags_all": {
              "Name": "publicsubnet2",
              "Project": "qa-subnets"
            },
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.non_prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047035:subnet/subnet-0910757671f7fee93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0910757671f7fee93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267047035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet3",
              "Project": "qa-subnets"
            },
            "tags_all": {
              "Name": "publicsubnet3",
              "Project": "qa-subnets"
            },
            "vpc_id": "vpc-099d8b822f47b9951"
          },
          "dependencies": [
            "module.vpc.aws_vpc.non_prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "non_prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047035:vpc/vpc-099d8b822f47b9951",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d81d12a462bc6ee7",
            "default_route_table_id": "rtb-04182b8708a0332d7",
            "default_security_group_id": "sg-0754a03eed51e7fdf",
            "dhcp_options_id": "dopt-0b6d3c60eae46e85c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099d8b822f47b9951",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04182b8708a0332d7",
            "owner_id": "533267047035",
            "tags": {
              "name": "QA-cluster"
            },
            "tags_all": {
              "name": "QA-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}